<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_image_search_24"
        android:orderInCategory="2"
        android:title="@string/image_search"
        app:showAsAction="ifRoom">

    </item>


    <item
        android:id="@+id/savedFragment"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:orderInCategory="1"
        android:title="@string/saved_images"
        app:showAsAction="ifRoom">

    </item>

</menu>