...
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_image_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detail_comments_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_comments"
            android:nextFocusDown="@id/detail_name_edit_text"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
...
