<resources>
    <string name="app_name">Pixashot</string>
    <string name="search_for_image">search for image</string>
    <string name="photo_image">Photo Image</string>
    <string name="enter_comments">enter comments</string>
    <string name="posted_by">Posted By</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_search">Image Search</string>
    <string name="saved_images">Saved Images</string>
    <string name="comments">Comments</string>
    <string name="by_michael_may">by Michael May</string>
    <string name="preview_of_image">Preview of Image</string>
    <string name="by">by </string>
    <string name="you_have_no_images_tap_the_image_search_button_to_get_started">You have no images saved. Tap the Image Search button to get started.</string>
    <string name="about">About</string>
</resources>